# GC-Implementation

./: .gitignore  CMakeLists.txt  README.md
conf/: gc.properties
main/: main.cpp
main/gc/: GC.cpp  GC.h
main/gc/core/: GCProperties.cpp  GCProperties.h
main/gc/core/mappers/: PropertiesMapper.cpp  PropertiesMapper.h
main/util/: Logger.cpp  Logger.h  PropertiesUtil.cpp  PropertiesUtil.h
test/: TestRunner.cpp  gctest_main.cpp  testSample.h
test/cxxtest-4.4/: runner.cpp
test/util/: PropertiesUtilTest.cc
util/: Logger.h  PropertiesUtil.cpp  PropertiesUtil.h
